# TSEBP2025

./: .gitattributes  .gitignore  README.md  SDPTestCommands.txt  package.json  pyproject.toml
.github/workflows/: ci.yml  python-ci.yml
CursorMD/: gitstructure.md  progress.md
ai/: README.md  __init__.py  __main__.py  requirements-evaluation.txt  requirements-runtime.txt
ai/ai_runtime/: __init__.py  artifacts.py  contracts.py  registry.py
ai/cli/: __init__.py  main.py
ai/evaluation/: __init__.py  adapters.py  cases.py  contracts.py  eval_cases.yaml  metrics.py  models.py  ranking.py  report.py  resources.py  runner.py  worker.py
ai/export/: __init__.py  export_codecsep_dnrv2_15cat_pte_only.py  export_onnx.py  export_target_speaker_windows.py  export_tflite.py  export_waveformer_edge.py  freeze_codecsep_dnrv2_15cat.py  requirements.txt  requirements_codecsep_dnrv2_15cat.txt  requirements_codecsep_dnrv2_15cat_pte_only.txt
ai/models/: model_selection.json
ai/scripts/: __init__.py  audit_waveformer_onnx.py  prepare_waveformer_wide_eval.py  run_android_waveformer_audition.py  run_model_comparison.py
ai/tests/: __init__.py  conftest.py
ai/training/: __init__.py  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
desktop/: .env.example  README.md  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.ts  test_profiler.py  vite.config.ts
desktop/scripts/: demo_custom_realtime.py  demo_debug_realtime.py  demo_realtime.py  install_audiosep.py  show_yamnet_detections.py  test_profiles.py  test_system.py  virtual_mic_streamer.py
desktop/src/: App.tsx  __init__.py  index.css  test_detective.py  test_mixer.py  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
desktop/src-tauri/src/audio/: devices.rs  io.rs  live.rs  mod.rs
desktop/src-tauri/src/engine/: dsp.rs  mod.rs  target_speaker.rs
desktop/tests/: test_audio.py  test_control_engine.py  test_detection_thread.py  test_profiles.py  test_suppression_quality.py  test_waveformer_separator.py
docs/project/: README.md
export/: export_onnx.py  export_tflite.py  requirements.txt
mobile/: app.config.ts  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  theme.config.js
mobile-backend/: README.md  audioapp.db  backedncalıstırmacommut.txt  conftest.py  debug_request.py  main.py  reproduce_error.py  requirements.txt  test_register.py
mobile-backend/core/: config.py  dependencies.py  mobile_model_bundle.py  security.py
mobile-backend/database/: db.py  models.py  schemas.py
mobile-backend/model_store/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
mobile-backend/routers/: auth.py  devices.py  history.py  model_update.py  separation.py
mobile-backend/scratch/: check_model.py
mobile-backend/scripts/: convert_to_onnx.py  create_admin.py
mobile-backend/tests/: test_auth.py  test_history.py  test_mobile_model_boundary.py  test_model_update.py
mobile-part/: .env.example  App.tsx  README.md  app.json  declarations.d.ts  index.ts  package-lock.json  package.json  tsconfig.json
mobile-part/15cat/: audioSep15.ts
mobile-part/CodecSepAPI/: main.py  requirements.txt
mobile-part/android/: settings.gradle
mobile-part/android/app/src/main/cpp/: CMakeLists.txt  native_oboe_audio_engine.cpp
mobile-part/context/: AuthContext.tsx  RecordingsContext.tsx  ThemeContext.tsx
mobile-part/hooks/: useSuppressionDemo.ts
mobile-part/screens/: ChangePasswordScreen.tsx  DashboardScreen.tsx  NotificationsScreen.tsx  ProfileScreen.tsx  RecordingsScreen.tsx  SettingsScreen.tsx
mobile-part/services/: CodecSepApiService.ts  ModelBundleService.ts  SuppressionEngineService.ts  WaveformerInferenceService.ts  YAMNetInferenceService.ts  api.ts
mobile-part/utils/: wavUtils.ts
mobile/app/: _layout.tsx
mobile/constants/: oauth.ts
mobile/hooks/: use-auth.ts
scripts/: download_models.py  setup_env.ps1  test_df.py  test_inference.py
shared/mappings/: yamnet_to_waveformer.yaml
shared/profiles/: default_profiles.json  profile_schema.json
training/: requirements.txt
(+302 files in other folders)
