[project]
name = "semantic-noise-mixer"
version = "0.1.0"
description = "Context-Aware Adaptive Noise Cancellation with Semantic Control"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["training/tests", "desktop/tests"]
python_files = "test_*.py"

