[project]
name = "tsebp2025"
version = "0.1.0"
description = "Semantic hearing, suppression, desktop, mobile, and model tooling"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["ai/tests"]
python_files = ["test_*.py"]
norecursedirs = [
  ".git",
  ".venv",
  "venv",
  "env",
  "node_modules",
  "backend/node_modules",
  "desktop/node_modules",
  "mobile-part/node_modules",
  "desktop/src-tauri/target",
  "ai/data/audio/waveformertestdownloads",
  "ai/models",
  "audioset_hf_test_*",
  "tmp*",
]

