[package]
name = "semantic-noise-suppression-desktop"
version = "0.1.0"
description = "Tauri desktop host for the AudioSepHive15Cat suppression runtime"
authors = ["TSEBP2025"]
edition = "2021"

[lib]
name = "desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
cpal = "0.15.3"
env_logger = "0.11.8"
hound = "3.5.1"
log = "0.4.28"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["ndarray", "load-dynamic", "api-24"] }
parking_lot = "0.12.3"
realfft = "3.4.0"
rtrb = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
symphonia = { version = "0.5.4", features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
thiserror = "2.0.12"
uuid = { version = "1.18.0", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Media_Audio", "Win32_System_Threading"] }
